--- a/src/shared/UI/Car/Car.module.scss
+++ b/src/shared/UI/Car/Car.module.scss
@@ -1,5 +1,6 @@
 .car {
-  min-width: 250px;
+  min-width: 310px;
+  min-height: 245px;
   padding: 15px;
 
   display: flex;
@@ -17,8 +18,15 @@
     text-align: center;
   }
 
-  span {
-    font-weight: 500;
+  &__info {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    span {
+      font-weight: 500;
+    }
   }
 
   &__btn {
