--- a/src/shared/UI/Car/Car.module.scss
+++ b/src/shared/UI/Car/Car.module.scss
@@ -1,11 +1,11 @@
 .car {
   min-width: 310px;
-  min-height: 245px;
+  min-height: 300px;
   padding: 15px;
 
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
 
   font-size: 20px;
   border: 1px solid #000;
@@ -19,6 +19,7 @@
   }
 
   &__info {
+    padding: 10px 0px;
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
